<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="55dp"
        app:srcCompat="@drawable/logo_blue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="280dp"
        android:text="@string/forgotscreen"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="460dp"
        android:text="@string/buttonfogotpassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="550dp"
        android:text="@string/SigninBTN"
        android:textSize="20dp" />


</RelativeLayout>